--- a/freeswitch-vagrant/Vagrantfile
+++ b/freeswitch-vagrant/Vagrantfile
@@ -1,19 +1,23 @@
 Vagrant.configure("2") do |config|
-  config.vm.box = "generic/ubuntu1804" # Cambiar si prefieres Ubuntu 20.04
+  config.vm.box = "generic/ubuntu2004"
 
   config.vm.network "private_network", type: "dhcp"
 
   config.vm.provider "virtualbox" do |vb|
-    vb.memory = "1024"
+    vb.memory = "4096"
     vb.cpus = 2
   end
 
   config.vm.boot_timeout = 600
   config.vm.synced_folder ".", "/vagrant", disabled: true
+
   config.vm.provision "shell", inline: <<-SHELL
+    set -e  # Detener ejecución en caso de error
+
+    # Actualizar paquetes
     apt-get update && apt-get upgrade -y
 
-    # Instalar dependencias necesarias
+    # Instalar herramientas necesarias
     apt-get install -y \
       wget \
       build-essential \
@@ -24,10 +28,8 @@ Vagrant.configure("2") do |config|
       libssl-dev \
       libcurl4-openssl-dev \
       libpcre3-dev \
-      libspeexdsp-dev \
       libedit-dev \
       libopus-dev \
-      libvpx-dev \
       libx264-dev \
       libxvidcore-dev \
       libjpeg-dev \
@@ -37,19 +39,77 @@ Vagrant.configure("2") do |config|
       libsqlite3-dev \
       libncurses5-dev \
       pkg-config \
-      libxml2-dev
+      libxml2-dev \
+      libpcap-dev \
+      libspandsp2 \
+      rsync \
+      unzip \
+      sudo \
+      autoconf-archive \
+      libpq-dev  # Para PostgreSQL
 
-    # Descargar y compilar FreeSWITCH
+    # Crear directorio de compilación
+    mkdir -p /usr/local/src/build
+    cd /usr/local/src/build
+
+    # Clonar y compilar LIBKS (Dependencia de FreeSWITCH)
+    git clone https://github.com/signalwire/libks.git
+    cd libks
+    cmake .
+    make -j$(nproc) && make install
+    ldconfig
+    sed -i 's/.*debian\\.gz.*/# \0/' *.txt  # Comentar línea con "debian.gz"
+    cd ..
+
+    # Clonar y compilar LIBPQ (Si FreeSWITCH usa PostgreSQL)
+    git clone https://github.com/postgres/postgres.git
+    cd postgres
+    ./configure
+    make -j$(nproc) && make install
+    ldconfig
+    sed -i 's/.*debian\\.gz.*/# \0/' *.txt
+    cd ..
+
+    # Clonar y compilar LIBYUV (Soluciona posibles fallos con make en FreeSWITCH)
+    git clone https://chromium.googlesource.com/libyuv/libyuv
+    cd libyuv
+    cmake .
+    make -j$(nproc) && make install
+    ldconfig
+    sed -i 's/.*debian\\.gz.*/# \0/' *.txt
+    cd ..
+
+    # Clonar y compilar Spandsp
     cd /usr/local/src
+    git clone https://github.com/freeswitch/spandsp.git
+    cd spandsp
+    git checkout v3.0.0
+    ./autogen.sh
+    ./configure
+    make -j$(nproc) && make install
+    ldconfig
+    sed -i 's/.*debian\\.gz.*/# \0/' *.txt
+    cd ..
+
+    # Descargar y compilar Sofia-SIP v1.13.17
+    wget https://sourceforge.net/projects/sofia-sip/files/sofia-sip/1.13.17/sofia-sip-1.13.17.tar.gz/download -O sofia-sip-1.13.17.tar.gz
+    tar -xvzf sofia-sip-1.13.17.tar.gz
+    cd sofia-sip-1.13.17
+    ./configure
+    make -j$(nproc) && make install
+    ldconfig
+    sed -i 's/.*debian\\.gz.*/# \0/' *.txt
+    cd ..
+
+    # Clonar y compilar FreeSWITCH
     git clone https://github.com/signalwire/freeswitch.git
     cd freeswitch
     ./bootstrap.sh
-    ./configure
+    ./configure --disable-warnings --enable-shared
     make -j$(nproc) && make install
-
-    # Instalar configuración de ejemplo y sonidos
     make samples
     make sounds-install
+    sed -i 's/.*debian\\.gz.*/# \0/' *.txt
 
     # Configurar FreeSWITCH como servicio
     cp debian/freeswitch-systemd /etc/systemd/system/freeswitch.service
